# rustyip

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  INSTALL.md  README.md  docker-compose.yml  openapi.json
.github/workflows/: ci.yml  deploy.yml  release.yml
deploy/: INSTALL.md  NOTE.txt
deploy/ansible/: playbook.yml
deploy/ansible/roles/app/handlers/: main.yml
deploy/ansible/roles/app/tasks/: main.yml
deploy/ansible/roles/app/templates/: docker-compose.yml.j2  env.j2  haproxy.cfg.j2
deploy/ansible/roles/base/handlers/: main.yml
deploy/ansible/roles/base/tasks/: main.yml
deploy/ansible/roles/base/templates/: fail2ban-sshd.conf.j2  limits.conf.j2  sysctl.conf.j2
deploy/ansible/roles/docker/tasks/: main.yml
deploy/ansible/roles/docker/templates/: daemon.json.j2
deploy/terraform/: firewall.tf  instance.tf  main.tf  outputs.tf  ssh_key.tf  variables.tf
haproxy/: haproxy.cfg  ipv4_domain.lst
locales/: ar.po  de.po  en.po  es.po  fr.po  id.po  it.po  ja.po  ko.po  messages.pot  nl.po  pt.po  ru.po  zh-Hans.po  zh-Hant.po
src/: cli_detect.rs  config.rs  db.rs  error.rs  handlers.rs  i18n.rs  ip_validate.rs  lib.rs  main.rs  middleware.rs  models.rs  routes.rs  static_assets.rs  ua_detect.rs  updater.rs
src/handlers/: api.rs  html.rs  mod.rs  seo.rs
src/models/: api.rs  mmdb.rs  mod.rs
static/: script.js  simple-line-icons.css  style.css
templates/: _footer.html  _footer_lang.html  _search_form.html  base.html  error_alert.html  error_page.html  index.html
tests/: integration.rs
